turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:16: error: not found: value i
  setCouleurBrosse(colors(i+1));
                          ^