turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var a = getCouleurSol();
  var pos =0;
  var taille = rule.length;
  for (i <- 0 to taille-1) {
    if (colors(i)==a) {
      if (rule(i)=="L") {
        gauche();
        pos = i
      } else {
        droite();
        pos = i }
    }  
  }
  setCouleurBrosse(colors(i+1));
  baisseBrosse();
  leveBrosse();
  avance();
}